Fix gcp memorystore threshold percent by ratio (#481)
* Fix ratio threshold

* Fix ratio threshold

* Fix ratio threshold

* Replace ratio by percent

* Replace ratio by percent

* Fix outputs

* Fix

* Update doc

--- a/modules/integration_gcp-memorystore-redis/conf/02-system-memory-usage.yaml
+++ b/modules/integration_gcp-memorystore-redis/conf/02-system-memory-usage.yaml
@@ -1,14 +1,16 @@
 ## Example
 module: GCP Memorystore Redis
-name: system memory usage ratio
+name: system memory usage
 
 value_unit: "%"
-transformation: ".min(over='1h')"
+transformation: ".min(over='30m')"
 
 signals:
-  signal:
-    metric: stats/memory/system_memory_usage_ratio
-    extrapolation: zero
+    A:
+      metric: stats/memory/system_memory_usage_ratio
+      extrapolation: zero
+    signal:
+      formula: A.scale(100)
 
 rules:
   critical:
