--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,1 @@
-*   @bzspi @cvauvarin @jmhautbois-claranet @pdecat @shr3ps @tchernomax @haedri
+*   @bzspi @cvauvarin @haedri @jmhautbois-claranet @pdecat @shr3ps @tchernomax
