--- a/modules/smart-agent_redis/conf/10-hitrate.yaml
+++ b/modules/smart-agent_redis/conf/10-hitrate.yaml
@@ -5,10 +5,10 @@ value_unit: "%"
 
 signals:
   A:
-    metric: '${var.use_otel_receiver ? "redis.keyspace.hits" : "counter.keyspace_hits"}'
+    metric: '${var.use_otel_receiver ? "redis.keyspace.hits" : "derive.keyspace_hits"}'
     rollup: delta
   B:
-    metric: '${var.use_otel_receiver ? "redis.keyspace.hits" : "counter.keyspace_hits"}'
+    metric: '${var.use_otel_receiver ? "redis.keyspace.hits" : "derive.keyspace_hits"}'
     rollup: delta
   signal:
     formula: (A/(A+B)).scale(100)
