--- a/modules/integration_aws-fsx/conf/01-free-storage-capacity.yaml
+++ b/modules/integration_aws-fsx/conf/01-free-storage-capacity.yaml
@@ -1,5 +1,6 @@
 module: "AWS FSx"
 name: "Free Space"
+id: "free_space"
 filtering: "filter('namespace', 'AWS/FSx')"
 value_unit: "Gibibyte"
 transformation: ".max(over='15m')"
@@ -13,8 +14,8 @@ signals:
 rules:
   critical:
     comparator: "<"
-    threshold: 10
+    # threshold: 10
   major:
     comparator: "<"
     dependency: critical
-    threshold: 20
+    # threshold: 20
