--- a/modules/integration_aws-fsx-windows-file-server/conf/01-free-storage-capacity.yaml
+++ b/modules/integration_aws-fsx-windows-file-server/conf/01-free-storage-capacity.yaml
@@ -1,4 +1,4 @@
-module: "AWS FSx"
+module: "AWS FSx for Windows File Server"
 name: "Free Space"
 id: "free_space"
 filtering: "filter('namespace', 'AWS/FSx')"
