--- a/modules/integration_aws-fsx-windows-file-server/conf/04-network-throughput-utilization.yaml
+++ b/modules/integration_aws-fsx-windows-file-server/conf/04-network-throughput-utilization.yaml
@@ -1,4 +1,4 @@
-module: "AWS FSx"
+module: "AWS FSx for Windows File Server"
 name: "Network Throughput Utilization"
 filtering: "filter('namespace', 'AWS/FSx')"
 value_unit: "%"
