--- a/modules/integration_aws-fsx-windows-file-server/conf/01-free-storage-capacity.yaml
+++ b/modules/integration_aws-fsx-windows-file-server/conf/01-free-storage-capacity.yaml
@@ -14,8 +14,8 @@ signals:
 rules:
   critical:
     comparator: "<"
-    # threshold: 10
+    threshold: 10
   major:
     comparator: "<"
     dependency: critical
-    # threshold: 20
+    threshold: 20
