--- a/modules/integration_azure-azure-search/conf/readme.yaml
+++ b/modules/integration_azure-azure-search/conf/readme.yaml
@@ -1,3 +1,3 @@
 documentations:
   - name: Azure Monitor metrics
-    url: 'https://docs.microsoft.com/en-us/azure/azure-monitor/essentials/metrics-supported#microsoftsearchsearchservices'
+    url: 'https://learn.microsoft.com/en-us/azure/azure-monitor/reference/supported-metrics/microsoft-search-searchservices-metrics'
