--- a/modules/integration_azure-cosmos-db/conf/readme.yaml
+++ b/modules/integration_azure-cosmos-db/conf/readme.yaml
@@ -1,3 +1,3 @@
 documentations:
   - name: Azure Monitor metrics
-    url: 'https://docs.microsoft.com/en-us/azure/azure-monitor/essentials/metrics-supported#microsoftdocumentdbdatabaseaccounts'
+    url: 'https://learn.microsoft.com/en-us/azure/azure-monitor/reference/supported-metrics/microsoft-documentdb-databaseaccounts-metrics'
