--- a/modules/integration_azure-sql-elastic-pool/conf/02-storage-usage.yaml
+++ b/modules/integration_azure-sql-elastic-pool/conf/02-storage-usage.yaml
@@ -1,7 +1,7 @@
 ---
-module: "Azure SQL Database"
+module: "Azure SQL Elastic Pool"
 name: "storage usage"
-filtering: "filter('resource_type', 'Microsoft.Sql/servers/databases') and filter('primary_aggregation_type', 'true')"
+filtering: "filter('resource_type', 'Microsoft.Sql/servers/elasticpools') and filter('primary_aggregation_type', 'true')"
 aggregation: ".mean(by=['azure_resource_name', 'azure_resource_group_name', 'azure_region'])"
 value_unit: "%"
 transformation: true
