Rework Azure App Service - fix

--- a/modules/integration_azure-app-service/conf/02-http-5xx-errors-count.yaml
+++ b/modules/integration_azure-app-service/conf/02-http-5xx-errors-count.yaml
@@ -9,7 +9,7 @@ signals:
     metric: Http5xx
     extrapolation: zero
   requests:
-    metric: requests
+    metric: Requests
     extrapolation: zero
   signal:
     formula: (http5xx/requests).scale(100).fill(0)
