--- a/modules/integration_aws-backup/conf/04-aws-backup-rp-partial.yaml
+++ b/modules/integration_aws-backup/conf/04-aws-backup-rp-partial.yaml
@@ -4,7 +4,7 @@ id: backup_rp_partial
 
 transformation: ".max(over='1d').fill(0)"
 aggregation: true
-filtering: "filter('namespace', 'AWS/Backup') and filter('stat', 'sum')"
+filtering: "filter('namespace', 'AWS/Backup') and filter('stat', 'sum') and filter('BackupVaultName', '*', match_missing=False) and filter('ResourceType', '*', match_missing=False)"
 
 signals:
   signal:
