Fix  rabbitMQ monitoring

--- a/modules/smart-agent_rabbitmq-queue/conf/04-consumer-use.yaml
+++ b/modules/smart-agent_rabbitmq-queue/conf/04-consumer-use.yaml
@@ -10,7 +10,7 @@ signals:
   msg:
     metric: gauge.queue.messages
   signal:
-    metric: gauge.queue.consumer_use
+    metric: gauge.queue.consumer_utilisation
 
 rules:
   critical:
