--- a/modules/prometheus-exporter_wallix-bastion/conf/readme.yaml
+++ b/modules/prometheus-exporter_wallix-bastion/conf/readme.yaml
@@ -11,7 +11,7 @@ source_doc: |
   ### Examples
 
   Here is a sample configuration fragment for the [OpenTelemetry Collector](https://opentelemetry.io/docs/collector/) agent using
-  the [prometheusexec receiver](https://github.com/open-telemetry/opentelemetry-collector-contrib/tree/main/receiver/prometheusexecreceiver).
+  the prometheusexec receiver ([deprecated](https://github.com/open-telemetry/opentelemetry-collector-contrib/pull/24740)).
 
   ```yaml
   receivers:
