fix #514 - wrong namespace

--- a/modules/integration_aws-elb/conf/01-latency.yaml
+++ b/modules/integration_aws-elb/conf/01-latency.yaml
@@ -3,7 +3,7 @@ name: backend latency
 
 transformation: true
 aggregation: true
-filtering: "filter('namespace', 'AWS/ApplicationELB')"
+filtering: "filter('namespace', 'AWS/ELB')"
 value_unit: "Second"
 
 signals:
