feat : convert detector to gen format

--- a/modules/integration_aws-elasticsearch/conf/06-free-space.yaml
+++ b/modules/integration_aws-elasticsearch/conf/06-free-space.yaml
@@ -1,6 +1,5 @@
 module: AWS Elasticsearch
-id: "free_space"
-name: "Free storage space"
+name: "Free space"
 
 transformation: ".scale(0.001)"
 aggregation: ""
