--- a/modules/integration_aws-elasticsearch/conf/08-cluster-cpu.yaml
+++ b/modules/integration_aws-elasticsearch/conf/08-cluster-cpu.yaml
@@ -1,6 +1,5 @@
 module: AWS Elasticsearch
-id: "cluster_cpu"
-name: "CPU utilization"
+name: "Cluster CPU"
 
 transformation: ".min(over='45m')"
 aggregation: ""
