feat : convert detector to gen format

--- a/modules/integration_aws-elasticache-common/conf/02-max-connection.yaml
+++ b/modules/integration_aws-elasticache-common/conf/02-max-connection.yaml
@@ -1,6 +1,5 @@
 module: AWS ElastiCache
-id: "max_connection"
-name: "Connections over max allowed"
+name: "Max connection"
 
 transformation: ".max(over='5m')"
 aggregation: true
