--- a/modules/integration_aws-elasticache-common/conf/05-free-memory.yaml
+++ b/modules/integration_aws-elasticache-common/conf/05-free-memory.yaml
@@ -1,6 +1,5 @@
 module: AWS ElastiCache
-id: "free_memory"
-name: "Freeable memory"
+name: "Free memory"
 
 transformation: ".rateofchange().mean(over='15m')"
 aggregation: true
