--- a/modules/integration_aws-elasticsearch/conf/03-5xx.yaml
+++ b/modules/integration_aws-elasticsearch/conf/03-5xx.yaml
@@ -11,45 +11,45 @@ value_unit: "%"
 signals:
   error_stream:
     metric: 5xx
-  opensearch_stream:
+  open_search_stream:
     metric: OpenSearchRequests
-  elasticsearch_stream:
+  elastic_search_stream:
     metric: ElasticsearchRequests
-  opensearch_signal:
-    formula: (error_stream/opensearch_stream*100)
+  open_search_signal:
+    formula: (error_stream/open_search_stream*100)
     publish: true
-  elasticsearch_signal:
-    formula: (error_stream/elasticsearch_stream*100)
+  elastic_search_signal:
+    formula: (error_stream/elastic_search_stream*100)
     publish: true
 
 rules:
-  opensearch_critical:
+  critical_open_search:
     threshold: 10
     comparator: ">"
     lasting_duration: "5m"
     lasting_at_least: 0.9
-    signal: opensearch_signal
+    signal: open_search_signal
     severity: critical
-  opensearch_major:
+  major_open_search:
     threshold: 5
     comparator: ">"
-    dependency: opensearch_critical
+    dependency: critical_open_search
     lasting_duration: "5m"
     lasting_at_least: 0.9
-    signal: opensearch_signal
+    signal: open_search_signal
     severity: major
-  elasticsearch_critical:
+  critical_elastic_search:
     threshold: 10
     comparator: ">"
     lasting_duration: "5m"
     lasting_at_least: 0.9
-    signal: elasticsearch_signal
+    signal: elastic_search_signal
     severity: critical
-  elasticsearch_major:
+  major_elastic_search:
     threshold: 5
     comparator: ">"
-    dependency: elasticsearch_critical
+    dependency: critical_elastic_search
     lasting_duration: "5m"
     lasting_at_least: 0.9
-    signal: elasticsearch_signal
+    signal: elastic_search_signal
     severity: major
