--- a/modules/integration_aws-elasticsearch/conf/03-5xx.yaml
+++ b/modules/integration_aws-elasticsearch/conf/03-5xx.yaml
@@ -9,22 +9,47 @@ runbook_url: "https://docs.aws.amazon.com/opensearch-service/latest/developergui
 value_unit: "%"
 
 signals:
-  A:
+  error_stream:
     metric: 5xx
-  B:
+  open_search_stream:
     metric: OpenSearchRequests
-  signal:
-    formula: (A/B*100)
+  elastic_search_stream:
+    metric: ElasticsearchRequests
+  open_search_signal:
+    formula: (error_stream/open_search_stream*100)
+    publish: true
+  elastic_search_signal:
+    formula: (error_stream/elastic_search_stream*100)
+    publish: true
 
 rules:
-  critical:
+  critical_open_search:
     threshold: 10
     comparator: ">"
     lasting_duration: "5m"
     lasting_at_least: 0.9
-  major:
+    signal: open_search_signal
+    severity: critical
+  major_open_search:
     threshold: 5
     comparator: ">"
-    dependency: critical
+    dependency: critical_open_search
     lasting_duration: "5m"
     lasting_at_least: 0.9
+    signal: open_search_signal
+    severity: major
+  critical_elastic_search:
+    threshold: 10
+    comparator: ">"
+    lasting_duration: "5m"
+    lasting_at_least: 0.9
+    signal: elastic_search_signal
+    severity: critical
+  major_elastic_search:
+    threshold: 5
+    comparator: ">"
+    dependency: critical_elastic_search
+    lasting_duration: "5m"
+    lasting_at_least: 0.9
+    signal: elastic_search_signal
+    severity: major
