--- a/modules/smart-agent_system-common/conf/04-inodes.yaml
+++ b/modules/smart-agent_system-common/conf/04-inodes.yaml
@@ -6,6 +6,7 @@ value_unit: "%"
 signals:
   signal:
     metric: percent_inodes.used
+    filter: not filter('fs_type', 'squashfs')
 rules:
   critical:
     threshold: 95
