fix: reuse old names for detectors when suitable

--- a/modules/integration_aws-elasticache-common/conf/02-max-connection.yaml
+++ b/modules/integration_aws-elasticache-common/conf/02-max-connection.yaml
@@ -1,5 +1,6 @@
 module: AWS ElastiCache
-name: "Max connection"
+id: "max_connection"
+name: "Connections over max allowed"
 
 transformation: ".max(over='5m')"
 aggregation: true
