--- a/modules/integration_aws-elasticache-common/conf/03-current-connection.yaml
+++ b/modules/integration_aws-elasticache-common/conf/03-current-connection.yaml
@@ -1,5 +1,6 @@
 module: AWS ElastiCache
-name: "No connection"
+id: "no_connection"
+name: "Current connections"
 
 transformation: ".min(over='5m')"
 aggregation: true
