--- a/modules/integration_aws-elasticsearch/conf/07-ultrawarm-free-space.yaml
+++ b/modules/integration_aws-elasticsearch/conf/07-ultrawarm-free-space.yaml
@@ -1,5 +1,6 @@
 module: AWS Elasticsearch
-name: "Ultrawarm Free space"
+id: "ultrawarm_free_space"
+name: "UltraWarm free storage space"
 
 transformation: ".scale(0.001)"
 aggregation: ""
