draft: fix: remove pointless CPU transformation (#520)
* fix: remove pointless CPU transformation

* fix: edit default lasting and at_least values after min() transformation removed

* fix: refactor using conf/gen

* factor: make gen

* factor: remove transformation variable + make gen

---------

Co-authored-by: Florent DELAHAYE <florent.delahaye@fr.clara.net>

--- a/modules/smart-agent_system-common/conf/01-cpu.yaml
+++ b/modules/smart-agent_system-common/conf/01-cpu.yaml
@@ -2,7 +2,6 @@ module: system
 
 name: "cpu utilization"
 id: cpu
-transformation: ".min(over='1h')"
 value_unit: "%"
 signals:
   signal:
@@ -12,7 +11,9 @@ rules:
   critical:
     threshold: 90
     comparator: ">"
+    lasting_duration: "1h"
   major:
     threshold: 85
     comparator: ">"
+    lasting_duration: "1h"
     dependency: critical
