--- a/modules/smart-agent_system-common/conf/04-inodes.yaml
+++ b/modules/smart-agent_system-common/conf/04-inodes.yaml
@@ -1,7 +1,6 @@
 module: system
 name: "disk inodes utilization"
 id: disk_inodes
-transformation: ".max(over='5m')"
 value_unit: "%"
 signals:
   signal:
@@ -10,7 +9,9 @@ rules:
   critical:
     threshold: 95
     comparator: ">"
+    lasting_duration: "5m"
   major:
     threshold: 90
     comparator: ">"
+    lasting_duration: "5m"
     dependency: critical
