--- a/modules/integration_aws-elasticsearch/conf/05-cluster-status.yaml
+++ b/modules/integration_aws-elasticsearch/conf/05-cluster-status.yaml
@@ -1,5 +1,5 @@
 module: AWS Elasticsearch
-name: Cluster Status
+name: Cluster status
 
 aggregation: ".min(over='15m')"
 filtering: "filter('namespace', 'AWS/ES') and filter('stat', 'upper')"
