--- a/modules/integration_aws-elasticsearch/conf/08-cluster-cpu.yaml
+++ b/modules/integration_aws-elasticsearch/conf/08-cluster-cpu.yaml
@@ -1,5 +1,6 @@
 module: AWS Elasticsearch
-name: "Cluster CPU"
+id: "cluster_cpu"
+name: "CPU utilization"
 
 transformation: ".min(over='45m')"
 aggregation: ""
