fix : incorrect dependency order for rules fix : incorrect rule level

--- a/modules/integration_azure-mariadb/conf/01-cpu.yaml
+++ b/modules/integration_azure-mariadb/conf/01-cpu.yaml
@@ -16,8 +16,8 @@ rules:
     threshold: 80
     comparator: ">"
     lasting_duration: '15m'
+    dependency: critical
   critical:
     threshold: 90
     comparator: ">"
     lasting_duration: '15m'
-    dependency: major
