--- a/modules/prometheus-exporter_varnish/conf/04-hit-rate.yaml
+++ b/modules/prometheus-exporter_varnish/conf/04-hit-rate.yaml
@@ -18,8 +18,8 @@ rules:
     threshold: 90
     comparator: "<"
     lasting_duration: "5m"
+    dependency: major
   major:
     threshold: 80
     comparator: "<="
     lasting_duration: "5m"
-    dependency: minor
