--- a/modules/integration_azure-mariadb/conf/03-io-conso.yaml
+++ b/modules/integration_azure-mariadb/conf/03-io-conso.yaml
@@ -16,8 +16,8 @@ rules:
     threshold: 80
     comparator: ">"
     lasting_duration: '15m'
+    dependency: critical
   critical:
     threshold: 90
     comparator: ">"
     lasting_duration: '15m'
-    dependency: major
