--- a/modules/integration_azure-mariadb/conf/05-replication-lag.yaml
+++ b/modules/integration_azure-mariadb/conf/05-replication-lag.yaml
@@ -15,8 +15,8 @@ rules:
     threshold: 100
     comparator: ">"
     lasting_duration: '15m'
+    dependency: critical
   critical:
     threshold: 200
     comparator: ">"
     lasting_duration: '15m'
-    dependency: major
