--- a/modules/integration_azure-load-balancer/conf/readme.yaml
+++ b/modules/integration_azure-load-balancer/conf/readme.yaml
@@ -5,4 +5,4 @@ documentations:
 notes: |
   ### About Healthprobe detector
 
-  Healthprobe detector is only available for loadbalances with a standard SKU. See [documentation](https://learn.microsoft.com/en-us/azure/load-balancer/skus).
+  Healthprobe detector is only available for loadbalancer with a standard SKU. See [documentation](https://learn.microsoft.com/en-us/azure/load-balancer/skus).
