--- a/modules/integration_newrelic-apm/conf/readme.yaml
+++ b/modules/integration_newrelic-apm/conf/readme.yaml
@@ -3,8 +3,7 @@ documentations:
     url: 'https://github.com/signalfx/integrations/blob/master/newrelic/README.md'
 
 notes: |
-  * The NewRelic integration from SignalFx still uses the deprecated [REST API
-  v1](https://docs.newrelic.com/docs/apis/rest-api-v1-deprecated/new-relic-rest-api-v1/working-new-relic-rest-api-v1-deprecated/).
+  * The NewRelic integration from SignalFx still uses the deprecated REST API v1.
   * It also generate too many metrics all considered as custom which could have a big
   impact in the SignalFx billing so you have to filter as much as possible to avoid that.
   * Sadly, the `errors_per_minute` filter is not available so the `errors` detector will
