--- a/modules/fame_azure-vpn/conf/02-tunnel-status.yaml
+++ b/modules/fame_azure-vpn/conf/02-tunnel-status.yaml
@@ -1,6 +1,6 @@
 module: Azure VPN
 name: IPSEC Tunnel Status
-id: tunnelstatus
+id: tunnel_status
 
 transformation: ".fill()"
 aggregation: ".mean(by=['azure_resource_group', 'azure_resource_name', 'remote_ip'])"
