--- a/modules/fame_azure-vpn/conf/02-tunnel-status.yaml
+++ b/modules/fame_azure-vpn/conf/02-tunnel-status.yaml
@@ -2,7 +2,7 @@ module: Azure VPN
 name: IPSEC Tunnel Status
 id: tunnel_status
 
-transformation: ".fill(duration='30d')"
+transformation: true
 aggregation: ".mean(by=['azure_resource_group', 'azure_resource_name', 'remote_ip'])"
 
 signals:
