--- a/modules/integration_azure-cdn/conf/01-origin-health.yaml
+++ b/modules/integration_azure-cdn/conf/01-origin-health.yaml
@@ -5,7 +5,7 @@ id: cdn_origin_health
 value_unit: "%"
 
 transformation: true
-aggregation: true
+aggregation: ".mean(by=['azure_resource_name', 'azure_resource_group_name', 'azure_region'])"
 
 signals:
   signal:
