--- a/modules/integration_azure-container-apps/conf/01-restarts.yaml
+++ b/modules/integration_azure-container-apps/conf/01-restarts.yaml
@@ -3,7 +3,7 @@ name: restarts
 filtering: "filter('resource_type', 'Microsoft.App/containerApps')"
 
 transformation: ".sum(over='15m')"
-aggregation: ".sum(by=['podname'])"
+aggregation: ".sum(['azure_resource_name', 'azure_resource_group_name', 'azure_region', 'podname'])"
 
 signals:
   signal:
