update mutliple detector name because of recreation

--- a/modules/smart-agent_elasticsearch/conf/05-cluster_pending_tasks.yaml
+++ b/modules/smart-agent_elasticsearch/conf/05-cluster_pending_tasks.yaml
@@ -1,5 +1,5 @@
 module: ElasticSearch
-name: "cluster pending tasks"
+name: "pending tasks"
 aggregation: true
 transformation: ".min(over='15m')"
 signals:
