--- a/modules/smart-agent_elasticsearch/conf/15-cluster_search_latency.yaml
+++ b/modules/smart-agent_elasticsearch/conf/15-cluster_search_latency.yaml
@@ -1,5 +1,5 @@
 module: ElasticSearch
-name: "search query latency"
+name: "search latency"
 aggregation: true
 transformation: ".min(over='30m')"
 filtering: "filter('node_name', '*')"
