--- a/modules/smart-agent_elasticsearch/conf/16-cluster_fetch_latency.yaml
+++ b/modules/smart-agent_elasticsearch/conf/16-cluster_fetch_latency.yaml
@@ -1,5 +1,5 @@
 module: ElasticSearch
-name: "search fetch latency"
+name: "fetch latency"
 aggregation: true
 transformation: ".min(over='15m')"
 filtering: "filter('node_name', '*')"
