--- a/modules/smart-agent_elasticsearch/conf/17-cluster_fielddata_cache_evictions_rate.yaml
+++ b/modules/smart-agent_elasticsearch/conf/17-cluster_fielddata_cache_evictions_rate.yaml
@@ -1,5 +1,5 @@
 module: ElasticSearch
-name: "fielddata cache evictions rate of change"
+name: "field_data evictions change"
 aggregation: true
 transformation: ".mean(over='15m')"
 filtering: "filter('node_name', '*')"
