--- a/modules/smart-agent_elasticsearch/conf/02-cluster_initializing_shards.yaml
+++ b/modules/smart-agent_elasticsearch/conf/02-cluster_initializing_shards.yaml
@@ -2,17 +2,18 @@ module: ElasticSearch
 name: "cluster initializing shards"
 aggregation: true
 transformation: ".min(over='15m')"
+filtering: "filter('plugin', 'elasticsearch')"
 signals:
   signal:
     metric: "elasticsearch.cluster.initializing-shards"
     rollup: average
 rules:
   critical:
-    threshold: 0
+    threshold: 1
     comparator: ">"
     description: "is too high"
   major:
-    threshold: -1
+    threshold: 0
     comparator: ">"
     dependency: critical
     description: "is too high"
