--- a/modules/smart-agent_elasticsearch/conf/07-cluster_file_descriptor.yaml
+++ b/modules/smart-agent_elasticsearch/conf/07-cluster_file_descriptor.yaml
@@ -1,5 +1,5 @@
 module: ElasticSearch
-name: "file descriptors usage"
+name: "file descriptors"
 aggregation: true
 transformation: ".max(over='15m')"
 filtering: "filter('node_name', '*')"
