--- a/modules/smart-agent_elasticsearch/conf/12-cluster_young-generation_garbage_collections_latency.yaml
+++ b/modules/smart-agent_elasticsearch/conf/12-cluster_young-generation_garbage_collections_latency.yaml
@@ -1,5 +1,5 @@
 module: ElasticSearch
-name: "young-generation garbage collections latency"
+name: "jvm gc young collection latency"
 aggregation: true
 transformation: ".mean(over='15m')"
 filtering: "filter('node_name', '*')"
