--- a/modules/smart-agent_elasticsearch/conf/14-cluster_flush_latency.yaml
+++ b/modules/smart-agent_elasticsearch/conf/14-cluster_flush_latency.yaml
@@ -1,5 +1,5 @@
 module: ElasticSearch
-name: "index flushing to disk latency"
+name: "flushing latency"
 aggregation: true
 transformation: ".mean(over='15m')"
 filtering: "filter('node_name', '*')"
