--- a/modules/smart-agent_elasticsearch/conf/04-cluster_unassigned_shards.yaml
+++ b/modules/smart-agent_elasticsearch/conf/04-cluster_unassigned_shards.yaml
@@ -2,6 +2,7 @@ module: ElasticSearch
 name: "cluster unassigned shards"
 aggregation: true
 transformation: ".min(over='10m')"
+filtering: "filter('plugin', 'elasticsearch')"
 signals:
   signal:
     metric: "elasticsearch.cluster.unassigned-shards"
@@ -11,8 +12,11 @@ rules:
     threshold: 0
     comparator: ">"
     description: "is too high"
+    lasting_duration: '10m'    
   major:
     threshold: -1
     comparator: ">"
     dependency: critical
     description: "is too high"
+    lasting_duration: '10m'    
+    disabled: true
