--- a/modules/smart-agent_elasticsearch/conf/02-cluster_initializing_shards.yaml
+++ b/modules/smart-agent_elasticsearch/conf/02-cluster_initializing_shards.yaml
@@ -12,8 +12,10 @@ rules:
     threshold: 1
     comparator: ">"
     description: "is too high"
+    lasting_duration: '15m'
   major:
     threshold: 0
     comparator: ">"
     dependency: critical
     description: "is too high"
+    lasting_duration: '15m'    
