--- a/modules/smart-agent_elasticsearch/conf/03-cluster_relocating_shards.yaml
+++ b/modules/smart-agent_elasticsearch/conf/03-cluster_relocating_shards.yaml
@@ -2,17 +2,21 @@ module: ElasticSearch
 name: "cluster relocating shards"
 aggregation: true
 transformation: ".min(over='15m')"
+filtering: "filter('plugin', 'elasticsearch')"
 signals:
   signal:
     metric: "elasticsearch.cluster.relocating-shards"
     rollup: average
 rules:
   critical:
-    threshold: 1
+    threshold: 0
     comparator: ">"
     description: "is too high"
+    lasting_duration: '15m'
   major:
-    threshold: 0
+    threshold: -1
     comparator: ">"
     dependency: critical
     description: "is too high"
+    lasting_duration: '15m'
+    disabled: true
