--- a/modules/smart-agent_elasticsearch/conf/06-cluster_cpu_usage.yaml
+++ b/modules/smart-agent_elasticsearch/conf/06-cluster_cpu_usage.yaml
@@ -2,7 +2,7 @@ module: ElasticSearch
 name: "cpu usage"
 aggregation: true
 transformation: ".min(over='30m')"
-filtering: "filter('node_name', '*')"
+filtering: "filter('node_name', '*') and filter('plugin', 'elasticsearch')"
 signals:
   signal:
     metric: "elasticsearch.process.cpu.percent"
@@ -12,8 +12,10 @@ rules:
     threshold: 95
     comparator: ">"
     description: "is too high"
+    lasting_duration: '30m'
   major:
     threshold: 85
     comparator: ">"
     dependency: critical
     description: "is too high"
+    lasting_duration: '30m'
