--- a/modules/smart-agent_elasticsearch/conf/07-cluster_file_descriptor.yaml
+++ b/modules/smart-agent_elasticsearch/conf/07-cluster_file_descriptor.yaml
@@ -2,7 +2,7 @@ module: ElasticSearch
 name: "file descriptors"
 aggregation: true
 transformation: ".max(over='15m')"
-filtering: "filter('node_name', '*')"
+filtering: "filter('node_name', '*') and filter('plugin', 'elasticsearch')"
 signals:
     A:
       metric: "elasticsearch.process.open_file_descriptors"
@@ -17,8 +17,10 @@ rules:
     threshold: 95
     comparator: ">"
     description: "is too high"
+    lasting_duration: '15m'    
   major:
     threshold: 90
     comparator: ">"
     dependency: critical
     description: "is too high"
+    lasting_duration: '15m'
