--- a/modules/smart-agent_elasticsearch/conf/08-cluster_JVM_heap_memory.yaml
+++ b/modules/smart-agent_elasticsearch/conf/08-cluster_JVM_heap_memory.yaml
@@ -2,7 +2,7 @@ module: ElasticSearch
 name: "JVM heap memory usage"
 aggregation: true
 transformation: ".mean(over='5m')"
-filtering: "filter('node_name', '*')"
+filtering: "filter('node_name', '*') and filter('plugin', 'elasticsearch')"
 signals:
   signal:
     metric: "elasticsearch.jvm.mem.heap-used-percent"
@@ -12,8 +12,10 @@ rules:
     threshold: 90
     comparator: ">"
     description: "is too high"
+    lasting_duration: '5m'    
   major:
     threshold: 80
     comparator: ">"
     dependency: critical
     description: "is too high"
+    lasting_duration: '5m'
