--- a/modules/smart-agent_elasticsearch/conf/10-cluster_JVM_memory_old_usage.yaml
+++ b/modules/smart-agent_elasticsearch/conf/10-cluster_JVM_memory_old_usage.yaml
@@ -2,7 +2,7 @@ module: ElasticSearch
 name: "JVM memory old usage"
 aggregation: true
 transformation: ".mean(over='10m')"
-filtering: "filter('node_name', '*')"
+filtering: "filter('node_name', '*') and filter('plugin', 'elasticsearch')"
 signals:
     A:
       metric: "elasticsearch.jvm.mem.pools.old.used_in_bytes"
@@ -17,8 +17,10 @@ rules:
     threshold: 90
     comparator: ">"
     description: "is too high"
+    lasting_duration: '10m'    
   minor:
     threshold: 80
     comparator: ">"
     description: "is too high"    
     dependency: major
+    lasting_duration: '10m'
