--- a/modules/smart-agent_elasticsearch/conf/12-cluster_young-generation_garbage_collections_latency.yaml
+++ b/modules/smart-agent_elasticsearch/conf/12-cluster_young-generation_garbage_collections_latency.yaml
@@ -2,7 +2,7 @@ module: ElasticSearch
 name: "jvm gc young collection latency"
 aggregation: true
 transformation: ".mean(over='15m')"
-filtering: "filter('node_name', '*')"
+filtering: "filter('node_name', '*') and filter('plugin', 'elasticsearch')"
 signals:
     A:
       metric: "elasticsearch.jvm.gc.time"
@@ -19,8 +19,10 @@ rules:
     threshold: 40
     comparator: ">"
     description: "is too high"
+    lasting_duration: '15m'    
   minor:
     threshold: 20
     comparator: ">"
     description: "is too high"    
     dependency: major
+    lasting_duration: '15m'
