--- a/modules/smart-agent_elasticsearch/conf/13-cluster_indexing_latency.yaml
+++ b/modules/smart-agent_elasticsearch/conf/13-cluster_indexing_latency.yaml
@@ -2,7 +2,7 @@ module: ElasticSearch
 name: "indexing latency"
 aggregation: true
 transformation: ".mean(over='15m')"
-filtering: "filter('node_name', '*')"
+filtering: "filter('node_name', '*') and filter('plugin', 'elasticsearch')"
 signals:
     A:
       metric: "elasticsearch.indices.indexing.index-time"
@@ -19,8 +19,10 @@ rules:
     threshold: 30
     comparator: ">"
     description: "is too high"
+    lasting_duration: '1h'    
   minor:
     threshold: 15
     comparator: ">"
     description: "is too high"    
     dependency: major
+    lasting_duration: '1h'
