--- a/modules/smart-agent_elasticsearch/conf/14-cluster_flush_latency.yaml
+++ b/modules/smart-agent_elasticsearch/conf/14-cluster_flush_latency.yaml
@@ -1,8 +1,8 @@
 module: ElasticSearch
-name: "flushing latency"
+name: "flush latency"
 aggregation: true
-transformation: ".mean(over='15m')"
-filtering: "filter('node_name', '*')"
+transformation: ".mean(over='30m')"
+filtering: "filter('node_name', '*') and filter('plugin', 'elasticsearch')"
 signals:
     A:
       metric: "elasticsearch.indices.flush.total-time"
@@ -19,8 +19,10 @@ rules:
     threshold: 150
     comparator: ">"
     description: "is too high"
+    lasting_duration: '15m'    
   minor:
     threshold: 100
     comparator: ">"
     description: "is too high"    
     dependency: major
+    lasting_duration: '15m'
