--- a/modules/smart-agent_elasticsearch/conf/17-cluster_fielddata_cache_evictions_rate.yaml
+++ b/modules/smart-agent_elasticsearch/conf/17-cluster_fielddata_cache_evictions_rate.yaml
@@ -2,7 +2,7 @@ module: ElasticSearch
 name: "field_data evictions change"
 aggregation: true
 transformation: ".mean(over='15m')"
-filtering: "filter('node_name', '*')"
+filtering: "filter('node_name', '*') and filter('plugin', 'elasticsearch')"
 signals:
   A:
     metric: "elasticsearch.indices.fielddata.evictions"
@@ -15,8 +15,10 @@ rules:
     threshold: 120
     comparator: ">"
     description: "is too high"
+    lasting_duration: '15m'
   minor:
     threshold: 60
     comparator: ">"
     description: "is too high"
     dependency: major
+    lasting_duration: '15m'
