--- a/modules/smart-agent_elasticsearch/conf/18-cluster_time_in_queue_change.yaml
+++ b/modules/smart-agent_elasticsearch/conf/18-cluster_time_in_queue_change.yaml
@@ -2,6 +2,7 @@ module: ElasticSearch
 name: "task time in queue change"
 aggregation: true
 transformation: ".mean(over='15m')"
+filtering: "filter('plugin', 'elasticsearch')"
 signals:
   A:
     metric: "elasticsearch.cluster.task-max-wait-time"
@@ -13,8 +14,10 @@ rules:
     threshold: 200
     comparator: ">"
     description: "is too high"
+    lasting_duration: '15m'    
   minor:
     threshold: 100
     comparator: ">"
     description: "is too high"
     dependency: major
+    lasting_duration: '15m'
