--- a/modules/smart-agent_elasticsearch/conf/00-heartbeat.yaml
+++ b/modules/smart-agent_elasticsearch/conf/00-heartbeat.yaml
@@ -2,7 +2,7 @@ module: Elasticsearch
 name: heartbeat
 
 transformation: false
-aggregation: true
+aggregation: ".mean(by=['cluster'])"
 exclude_not_running_vm: true
 filtering: "filter('plugin', 'elasticsearch')"
 
