zookeeper latency: fix aggregation

--- a/modules/smart-agent_zookeeper/conf/01-zookeeper-cluster-latency.yaml
+++ b/modules/smart-agent_zookeeper/conf/01-zookeeper-cluster-latency.yaml
@@ -1,7 +1,7 @@
 module: zookeeper
 name: cluster-latency
 transformation: false
-aggregation: ".mean(by='env')"
+aggregation: ".mean(by=['env', 'kubernetes_cluster'])"
 disabled: false
 
 signals:
