--- a/modules/smart-agent_zookeeper/conf/00-zookeeper-health.yaml
+++ b/modules/smart-agent_zookeeper/conf/00-zookeeper-health.yaml
@@ -1,8 +1,5 @@
 module: zookeeper
-name: zookeeper-health
-transformation: false
-aggregation: true
-exclude_not_running_vm: true
+name: health
 disabled: false
 signals:
   signal:
