--- a/modules/smart-agent_elasticsearch/conf/02-cluster_initializing_shards.yaml
+++ b/modules/smart-agent_elasticsearch/conf/02-cluster_initializing_shards.yaml
@@ -1,7 +1,6 @@
 module: ElasticSearch
 name: "cluster initializing shards"
-aggregation: true
-transformation: ".min(over='15m')"
+aggregation: ".max(by=['cluster'])"
 filtering: "filter('plugin', 'elasticsearch')"
 signals:
   signal:
@@ -10,7 +9,7 @@ signals:
 rules:
   critical:
     threshold: 1
-    comparator: ">"
+    comparator: ">="
     description: "is too high"
     lasting_duration: '15m'
   major:
