--- a/modules/smart-agent_elasticsearch/conf/05-cluster_pending_tasks.yaml
+++ b/modules/smart-agent_elasticsearch/conf/05-cluster_pending_tasks.yaml
@@ -1,7 +1,6 @@
 module: ElasticSearch
 name: "pending tasks"
-aggregation: true
-transformation: ".min(over='15m')"
+aggregation: ".max(by=['cluster'])"
 filtering: "filter('plugin', 'elasticsearch')"
 signals:
   signal:
@@ -10,7 +9,7 @@ signals:
 rules:
   critical:
     threshold: 5
-    comparator: ">"
+    comparator: ">="
     description: "are too high"
     lasting_duration: '15m'    
   major:
