--- a/modules/smart-agent_elasticsearch/conf/06-cluster_cpu_usage.yaml
+++ b/modules/smart-agent_elasticsearch/conf/06-cluster_cpu_usage.yaml
@@ -1,7 +1,6 @@
 module: ElasticSearch
 name: "cpu usage"
-aggregation: true
-transformation: ".min(over='30m')"
+aggregation: ".max(by=['cluster'])"
 filtering: "filter('node_name', '*') and filter('plugin', 'elasticsearch')"
 signals:
   signal:
@@ -10,7 +9,7 @@ signals:
 rules:
   critical:
     threshold: 95
-    comparator: ">"
+    comparator: ">="
     description: "is too high"
     lasting_duration: '30m'
   major:
