--- a/modules/smart-agent_elasticsearch/conf/08-cluster_JVM_heap_memory.yaml
+++ b/modules/smart-agent_elasticsearch/conf/08-cluster_JVM_heap_memory.yaml
@@ -1,7 +1,6 @@
 module: ElasticSearch
 name: "JVM heap memory usage"
-aggregation: true
-transformation: ".mean(over='5m')"
+aggregation: ".max(by=['cluster'])"
 filtering: "filter('node_name', '*') and filter('plugin', 'elasticsearch')"
 signals:
   signal:
@@ -10,7 +9,7 @@ signals:
 rules:
   critical:
     threshold: 90
-    comparator: ">"
+    comparator: ">="
     description: "is too high"
     lasting_duration: '5m'    
   major:
