--- a/modules/smart-agent_elasticsearch/conf/09-cluster_JVM_memory_young_usage.yaml
+++ b/modules/smart-agent_elasticsearch/conf/09-cluster_JVM_memory_young_usage.yaml
@@ -1,7 +1,6 @@
 module: ElasticSearch
 name: "JVM memory young usage"
-aggregation: true
-transformation: ".mean(over='10m')"
+aggregation: ".max(by=['cluster'])"
 filtering: "filter('node_name', '*') and filter('plugin', 'elasticsearch')"
 signals:
     A:
@@ -15,7 +14,7 @@ signals:
 rules:
   major:
     threshold: 90
-    comparator: ">"
+    comparator: ">="
     description: "is too high"
     lasting_duration: '10m'    
   minor:
