--- a/modules/smart-agent_elasticsearch/conf/17-cluster_fielddata_cache_evictions_rate.yaml
+++ b/modules/smart-agent_elasticsearch/conf/17-cluster_fielddata_cache_evictions_rate.yaml
@@ -1,7 +1,6 @@
 module: ElasticSearch
 name: "field_data evictions change"
-aggregation: true
-transformation: ".mean(over='15m')"
+aggregation: ".max(by=['cluster'])"
 filtering: "filter('node_name', '*') and filter('plugin', 'elasticsearch')"
 signals:
   A:
@@ -13,7 +12,7 @@ signals:
 rules:
   major:
     threshold: 120
-    comparator: ">"
+    comparator: ">="
     description: "is too high"
     lasting_duration: '15m'
   minor:
