--- a/modules/smart-agent_elasticsearch/conf/18-cluster_time_in_queue_change.yaml
+++ b/modules/smart-agent_elasticsearch/conf/18-cluster_time_in_queue_change.yaml
@@ -1,7 +1,6 @@
 module: ElasticSearch
 name: "task time in queue change"
-aggregation: true
-transformation: ".mean(over='15m')"
+aggregation: ".max(by=['cluster'])"
 filtering: "filter('plugin', 'elasticsearch')"
 signals:
   A:
@@ -12,7 +11,7 @@ signals:
 rules:
   major:
     threshold: 200
-    comparator: ">"
+    comparator: ">="
     description: "is too high"
     lasting_duration: '15m'    
   minor:
