no aggregation for server-health

--- a/modules/smart-agent_zookeeper/conf/00-zookeeper-server-health.yaml
+++ b/modules/smart-agent_zookeeper/conf/00-zookeeper-server-health.yaml
@@ -1,6 +1,7 @@
 module: zookeeper
 name: server-health
 disabled: false
+aggregation: false
 signals:
   signal:
     metric: "gauge.zk_service_health"
